Minor changes for the new Java version.